--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
-    <title>YiEngine V4.4 - 易学全能自适应版</title>
+    <title>万事不决算一卦</title>
     <script src="https://cdn.jsdelivr.net/npm/lunar-javascript@1.2.37/lunar.js"></script>
     <style>
         :root {
@@ -277,9 +277,18 @@
 <div class="sidebar" id="sidebar">
     <div class="title-box">
         <div class="title-main">YiEngine V4.4</div>
-        <div class="title-sub">易学全能版</div>
+        <div class="title-sub">梅花易数奇门遁甲</div>
     </div>
-
+    
+<div style="text-align:center; margin-bottom: 15px;">
+        <a href="about.html"
+           style="display:inline-block; padding:8px 18px; background:#d4ac0d; color:#000;
+                  text-decoration:none; border-radius:6px; font-family:'PingFang SC','Microsoft YaHei',sans-serif;
+                  font-size:14px;">
+           六爻算卦
+        </a>
+    </div>
+    
     <div class="system-switch">
         <div class="sys-btn active" id="btn-meihua" onclick="setSystem('meihua')">梅花易数</div>
         <div class="sys-btn" id="btn-qimen" onclick="setSystem('qimen')">奇门遁甲</div>
@@ -866,4 +875,5 @@
 
 </script>
 </body>
+
 </html>
