--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
-    <title>万事不决算一卦</title>
+    <title>AI算命大师保证准祝你们都有好运</title>
     <script src="https://cdn.jsdelivr.net/npm/lunar-javascript@1.2.37/lunar.js"></script>
     <style>
         :root {
@@ -877,3 +877,4 @@
 </body>
 
 </html>
+
