--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
-    <title>AI算命大师保证准祝你们都有好运</title>
+    <title>AI算命大师</title>
     <script src="https://cdn.jsdelivr.net/npm/lunar-javascript@1.2.37/lunar.js"></script>
     <style>
         :root {
@@ -276,8 +276,8 @@
 
 <div class="sidebar" id="sidebar">
     <div class="title-box">
-        <div class="title-main">YiEngine V4.4</div>
-        <div class="title-sub">梅花易数奇门遁甲</div>
+        <div class="title-main">万事不决算一卦</div>
+        <div class="title-sub">梅花易数、奇门遁甲、六爻算卦</div>
     </div>
     
 <div style="text-align:center; margin-bottom: 15px;">
@@ -877,4 +877,5 @@
 </body>
 
 </html>
+
 
