--- a/about.html
+++ b/about.html
@@ -6,7 +6,7 @@
     <meta name="apple-mobile-web-app-capable" content="yes">
     <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
     <meta name="apple-mobile-web-app-title" content="万事不决">
-    <title>万事不决算一卦</title>
+    <title>请自备铜钱三枚 正面是3反面是2 摇六次 从下往上记录每次数字之和 6是老阴7是少阳8是少阴9是老阳 </title>
     
     <script>
         window.onerror = function(msg, url, lineNo, columnNo, error) {
@@ -1235,3 +1235,4 @@
 
 </body>
 </html>
+
