--- a/about.html
+++ b/about.html
@@ -6,7 +6,7 @@
     <meta name="apple-mobile-web-app-capable" content="yes">
     <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
     <meta name="apple-mobile-web-app-title" content="万事不决">
-    <title>请自备铜钱三枚 正面是3反面是2 摇六次 从下往上记录每次数字之和 6是老阴7是少阳8是少阴9是老阳 </title>
+    <title> 摇一摇 </title>
     
     <script>
         window.onerror = function(msg, url, lineNo, columnNo, error) {
@@ -154,8 +154,8 @@
 
 <div class="container">
     <header>
-        <div class="brand">万事不决<span>算一卦</span></div>
-        <div class="slogan">周易古籍 · 易林补遗 · 深度详批</div>
+        <div class="brand">摇一摇<span>看一看</span></div>
+        <div class="slogan">请自备铜钱三枚 正面是3反面是2 摇六次 从下往上记录每次数字之和 6是老阴7是少阳8是少阴9是老阳</div>
     </header>
 
     <div class="input-section">
@@ -1235,4 +1235,5 @@
 
 </body>
 </html>
+
 
