--- a/about.html
+++ b/about.html
@@ -6,7 +6,7 @@
     <meta name="apple-mobile-web-app-capable" content="yes">
     <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
     <meta name="apple-mobile-web-app-title" content="万事不决">
-    <title> 六爻打卦 </title>
+    <title> 六爻算卦 </title>
     
     <script>
         window.onerror = function(msg, url, lineNo, columnNo, error) {
@@ -1235,6 +1235,7 @@
 
 </body>
 </html>
+
 
 
 
