--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>渊海子平 - 正宗八字排盘与批命 (专业版)</title>
+    <title>我吃了《渊海子平》《子平真诠》《千里命稿》《穷通宝鉴》《三命通会》《滴天髓-原文》《滴天髓阐微》《神峰通考》《命理探源》《李虚中命书》《五行大义》《玉照定真经》《鬼谷遗文》《星平会海》《子平管见》《星命抉古录》《月谈赋》你可以放心算了吧</title>
     <script src="https://cdn.tailwindcss.com"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/3.9.1/chart.min.js"></script>
     <link href="https://fonts.googleapis.com/css2?family=Ma+Shan+Zheng&family=Noto+Serif+SC:wght@400;700&display=swap" rel="stylesheet">
@@ -839,3 +839,4 @@
     </script>
 </body>
 </html>
+
