--- a/index.html
+++ b/index.html
@@ -341,6 +341,13 @@
             </div>
         </div>
 
+         <div class="text-center mt-6">
+            <button id="btn-recalc"
+                    class="inline-block bg-red-900 text-white font-bold py-2 px-6 rounded shadow hover:bg-red-800 transition transform hover:scale-105">
+                返回重算
+            </button>
+        </div>
+        
         <div class="text-center pb-12 text-gray-400 text-xs">
             <p>※ 命理建议仅供参考，积善之家必有余庆，命运掌握在自己手中 ※</p>
         </div>
@@ -839,5 +846,6 @@
     </script>
 </body>
 </html>
+
 
 
