--- a/index.html
+++ b/index.html
@@ -118,6 +118,11 @@
                 </button>
             </div>
         </form>
+<div class="mt-6 text-center text-sm text-gray-700">
+        <span class="inline-block px-4 py-2 bg-white/70 rounded-full border border-red-200">
+            烦心事我帮你看看？
+        </span>
+    </div>
     </div>
 
     <!-- 结果展示区 -->
@@ -341,10 +346,12 @@
             </div>
         </div>
 
-         <div class="text-center mt-6">
-            <button id="btn-recalc"
-                    class="inline-block bg-red-900 text-white font-bold py-2 px-6 rounded shadow hover:bg-red-800 transition transform hover:scale-105">
-                返回重算
+           <div class="text-center pb-12">
+            <button
+                id="btn-recalc"
+                class="bg-gray-800 text-white px-6 py-2 rounded shadow hover:bg-gray-700 transition"
+            >
+                🔁 返回重算
             </button>
         </div>
         
@@ -843,29 +850,33 @@
             document.getElementById('result-area').classList.remove('hidden');
             window.scrollTo({ top: 0, behavior: 'smooth' });
         });
-         // 「返回重算」按钮：隐藏结果，重新显示输入区并清空表单
-document.getElementById('btn-recalc').addEventListener('click', function () {
-    // 清空表单
-    document.getElementById('bazi-form').reset();
+         // ✅ 「返回重算」按钮：隐藏结果，重新显示输入区并清空表单
+    const recalcBtn = document.getElementById('btn-recalc');
+    if (recalcBtn) {
+        recalcBtn.addEventListener('click', function () {
+            // 清空表单
+            document.getElementById('bazi-form').reset();
 
-    // 隐藏结果区域
-    document.getElementById('result-area').classList.add('hidden');
+            // 隐藏结果区域
+            document.getElementById('result-area').classList.add('hidden');
 
-    // 显示输入区域
-    document.getElementById('input-area').classList.remove('hidden');
+            // 显示输入区域
+            document.getElementById('input-area').classList.remove('hidden');
 
-    // 销毁图表，避免重复叠加
-    if (window.chartInstance) {
-        window.chartInstance.destroy();
-        window.chartInstance = null;
+            // 销毁图表，避免重复叠加
+            if (chartInstance) {
+                chartInstance.destroy();
+                chartInstance = null;
+            }
+
+            // 回到顶部
+            window.scrollTo({ top: 0, behavior: 'smooth' });
+        });
     }
-
-    // 回到顶部
-    window.scrollTo({ top: 0, behavior: 'smooth' });
-});
     </script>
 </body>
 </html>
+
 
 
 
