--- a/index.html
+++ b/index.html
@@ -85,8 +85,8 @@
 
     <!-- 头部 -->
     <header class="text-center mb-8">
-        <h1 class="title-font text-5xl text-red-900 mb-2">天机 · 八字排盘</h1>
-        <p class="text-gray-600 tracking-widest text-sm">我吃了《渊海子平》《子平真诠》《千里命稿》《穷通宝鉴》《三命通会》《滴天髓-原文》《滴天髓阐微》《神峰通考》《命理探源》《李虚中命书》《五行大义》《玉照定真经》《鬼谷遗文》《星平会海》《子平管见》《星命抉古录》《月谈赋》你可以放心算了吧</p>
+        <h1 class="title-font text-5xl text-red-900 mb-2">随便玩玩不能当真</h1>
+        <p class="text-gray-600 tracking-widest text-sm">我吃了《渊海子平》《子平真诠》《千里命稿》《穷通宝鉴》《三命通会》《滴天髓-原文》《滴天髓阐微》《神峰通考》《命理探源》《李虚中命书》《五行大义》《玉照定真经》《鬼谷遗文》《星平会海》《子平管见》《星命抉古录》《月谈赋》你懂不懂？</p>
     </header>
 
     <!-- 输入区 -->
@@ -876,6 +876,7 @@
     </script>
 </body>
 </html>
+
 
 
 
