--- a/index.html
+++ b/index.html
@@ -118,11 +118,14 @@
                 </button>
             </div>
         </form>
-<div class="mt-6 text-center text-sm text-gray-700">
-        <span class="inline-block px-4 py-2 bg-white/70 rounded-full border border-red-200">
-            烦心事我帮你看看？
-        </span>
-    </div>
+<div class="mt-10 text-center">
+    <button
+        id="btn-project"
+        class="bg-purple-700 text-white text-xl font-bold py-4 px-10 rounded-full shadow-lg 
+               hover:bg-purple-800 transition transform hover:scale-105"
+    >
+        烦心事我帮你看看？
+    </button>
     </div>
 
     <!-- 结果展示区 -->
@@ -876,6 +879,7 @@
     </script>
 </body>
 </html>
+
 
 
 
