--- a/index.html
+++ b/index.html
@@ -876,9 +876,22 @@
             window.scrollTo({ top: 0, behavior: 'smooth' });
         });
     }
+         // 「烦心事我帮你看看？」按钮：跳转到 project 页面
+    const projectBtn = document.getElementById('btn-project');
+    if (projectBtn) {
+        projectBtn.addEventListener('click', function () {
+            // 这里根据你的实际路径改 ↓↓↓
+            // 如果是 project/index.html：
+            window.location.href = "project/index.html";
+
+            // 如果你的文件叫 project.html，就改成：
+            // window.location.href = "project.html";
+        });
+    }
     </script>
 </body>
 </html>
+
 
 
 
