--- a/index.html
+++ b/index.html
@@ -880,12 +880,13 @@
     const projectBtn = document.getElementById('btn-project');
     if (projectBtn) {
         projectBtn.addEventListener('click', function () {
-            window.location.href = "project.html";
+            window.location.href = "https://lll19890928-hash.github.io/lily.github.io/project.html";
         });
     }
     </script>
 </body>
 </html>
+
 
 
 
