--- a/index.html
+++ b/index.html
@@ -117,16 +117,18 @@
                     排 盘 详 批
                 </button>
             </div>
-        </form>
-<div class="mt-10 text-center">
-    <button
-        id="btn-project"
-        class="bg-purple-700 text-white text-xl font-bold py-4 px-10 rounded-full shadow-lg 
-               hover:bg-purple-800 transition transform hover:scale-105"
-    >
-        烦心事我帮你看看？
-    </button>
-    </div>
+         </form>
+        <div class="mt-10 text-center">
+            <button
+                id="btn-project"
+                class="bg-purple-700 text-white text-xl font-bold py-4 px-10 rounded-full shadow-lg 
+                       hover:bg-purple-800 transition transform hover:scale-105"
+            >
+                烦心事我帮你看看？
+            </button>
+        </div> <!-- 这是按钮外层的 div -->
+
+    </div> <!-- ⭐ 新增这一行：关闭最上面的 input-area 容器 -->
 
     <!-- 结果展示区 -->
     <div id="result-area" class="hidden animate-fade-in space-y-8">
@@ -886,6 +888,7 @@
     </script>
 </body>
 </html>
+
 
 
 
