--- a/index.html
+++ b/index.html
@@ -124,7 +124,7 @@
                 class="bg-purple-700 text-white text-xl font-bold py-4 px-10 rounded-full shadow-lg 
                        hover:bg-purple-800 transition transform hover:scale-105"
             >
-                烦心事我帮你看看？
+                万事不决 算一卦？
             </button>
         </div> <!-- 这是按钮外层的 div -->
 
@@ -888,6 +888,7 @@
     </script>
 </body>
 </html>
+
 
 
 
